...
        VStack {
            HStack {
                Text((suggestedEventState["isEventSaved"] as! Bool) ? "Done" : "Cancel")
                    .font(.nunitoBold(size: 14))
                    .padding(.vertical, 10)
                    .foregroundColor(Color(Asset.cancelText.name))
                    .accessibilityIdentifier((suggestedEventState["isEventSaved"] as! Bool) ? "btn_add_event_done" : "btn_add_event_cancel")
                    .onTapGesture {
                        self.presentationMode.wrappedValue.dismiss()
                    }
                
                Spacer()
                
...
                    .frame(width: isAddEventInProgress ? 115 : 68, height: 32)
                    .background(
                        Color(hex: "SaveButtonBackground")
                    )
                    .clipShape(RoundedRectangle(cornerRadius: 5))
                })
                .accessibilityIdentifier("btn_save_event")
                .disabled(accountId.isEmpty || description.trimmingCharacters(in: .whitespacesAndNewlines).isEmpty || !(suggestedEventState["isStartDateSelected"] as! Bool) || !(suggestedEventState["isStartTimeSelected"] as! Bool) || !(suggestedEventState["isEndDateSelected"] as! Bool) || !(suggestedEventState["isEndTimeSelected"] as! Bool) || isAddEventInProgress || (suggestedEventState["isEventS
                .opacity(accountId.isEmpty || description.trimmingCharacters(in: .whitespacesAndNewlines).isEmpty || !(suggestedEventState["isStartDateSelected"] as! Bool) || !(suggestedEventState["isStartTimeSelected"] as! Bool) || !(suggestedEventState["isEndDateSelected"] as! Bool) || !(suggestedEventState["isEndTimeSelected"] as! Bool) ? 0.7 : 1)
            }
            .padding(.vertical)
            
            HStack {
...
                    if !(suggestedEventState["isEventSaved"] as! Bool) {
                        DatePickerView(selectedDate: $startDate, onTap: {
                            createNoteScreenViewModel.setEventDataAttribute(id: suggestionId ?? "", attrKey: "isStartDateSelected", attrValue: true)
                        })
                        .background(.white)
                        .cornerRadius(8)
                        .accessibilityIdentifier("dp_add_event_select_start_date")
                        .compositingGroup()
                        .scaleEffect(x: 1.5, y: 1.5)
                        .clipped()
                    }
                    
                    HStack(spacing: 0) {
...
                    if !(suggestedEventState["isEventSaved"] as! Bool) {
                        TimePickerView(selectedTime: $startTime, onTap: {
                            createNoteScreenViewModel.setEventDataAttribute(id: suggestionId ?? "", attrKey: "isStartTimeSelected", attrValue: true)
                        })
                        .background(.white)
                        .cornerRadius(8)
                        .accessibilityIdentifier("dp_add_event_select_start_time")
                    }
                    
                    HStack(spacing: 0) {
                        Text(BasicHelper.getTimeStringFromDate(from: startTime))
                            .foregroundColor(Color(Asset.termsPrimary.name))
                            .font(.nunitoBold( size: 12))
...
                    if !(suggestedEventState["isEventSaved"] as! Bool) {
                        DatePickerView(selectedDate: $endDate, onTap: {
                            createNoteScreenViewModel.setEventDataAttribute(id: suggestionId ?? "", attrKey: "isEndDateSelected", attrValue: true)
                        })
                        .background(.white)
                        .cornerRadius(8)
                        .accessibilityIdentifier("dp_add_event_select_end_date")
                        .compositingGroup()
                        .scaleEffect(x: 1.5, y: 1.5)
                        .clipped()
                    }
                    
                    HStack(spacing: 0) {
...
                    if !(suggestedEventState["isEventSaved"] as! Bool) {
                        TimePickerView(selectedTime: $endTime, onTap: {
                            createNoteScreenViewModel.setEventDataAttribute(id: suggestionId ?? "", attrKey: "isEndTimeSelected", attrValue: true)
                        })
                        .background(.white)
                        .cornerRadius(8)
                        .accessibilityIdentifier("dp_add_event_select_end_time")
                    }
                    
                    HStack(spacing: 0) {
                        Text(BasicHelper.getTimeStringFromDate(from: endTime))
                            .foregroundColor(Color(Asset.termsPrimary.name))
                            .font(.nunitoBold( size: 12))
...
            ScrollView {
                if !(suggestedEventState["isEventSaved"] as! Bool) {
                    TextField("Add Event", text: $description, axis: .vertical)
                        .foregroundColor(Color(Asset.textPrimary.name))
                        .font(.nunitoSemiBold(size: 18))
                        .focused($focused)
                        .accessibilityIdentifier("et_create_event")
                        .onTapGesture {
                            // Do nothing. Kept on tap here to override tap action over parent tap action
                        }
                        .padding(.top)
                        .lineLimit(4...)
                } else {
...
