...
            }, label: {
                HStack {
                    Image(Asset.eventsIcon.name)
                    Text("Add Event")
                        .font(.nunitoSemiBold(size: 16))
                        .foregroundColor(Color(Asset.textPrimary.name))
                        .accessibilityIdentifier("txt_create_note_popover_add_event")
                }
            })
            .accessibilityIdentifier("btn_create_note_popover_add_event")
            .contentShape(Rectangle())
        }
        .padding(10)
        .cornerRadius(4)
        .background(Color(Asset.cardBackground.name))
        .overlay(
...
